tests/expectations/parser/functions/name_function_constructo_fail.out
Error [EPAR0370047]: expected function name
    --> test:2:22
     |
   2 |     async transition constructor(x: u8) -> u8 {
     |                      ^^^^^^^^^^^
